--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,25 +2,29 @@
 
 {% block content %}
 <div class="container">
-<div class="intouch"> 
-    <div class="links">
-        <h1>Contact Me</h1>
-        <li><a href="https://www.linkedin.com/in/arunaofficial/"><img src="../static/linkedin-icon.svg"/></a> Let's Connect on Linkedin</li>
-        <li><a href="mailto:arunakumariofficial@gmail.com"><img src="../static/Email.svg"/></a> Reply time within a day or Everyday</li>
-        <li><a href="https://github.com/iaruna"><img src="../static/github-icon.svg"/></a> Let's Connect on Github </li>
-    </div>
+    <div class="intouch">
+        <div class="links">
+            <h1>Contact Me</h1>
+            <li><a href="https://www.linkedin.com/in/arunaofficial/"><img src="../static/linkedin-icon.svg" /></a> Let's
+                Connect on Linkedin</li>
+            <li><a href="mailto:arunakumariofficial@gmail.com"><img src="../static/Email.svg" /></a> Reply time within a
+                day or Everyday</li>
+            <li><a href="https://github.com/iaruna"><img src="../static/github-icon.svg" /></a> Let's Connect on Github
+            </li>
+        </div>
 
-    <div class="form">
-        <h1>Get In Touch</h1>
-        <form>   
-        <label for="name">Name:</label><br><input type="text" id="name" name="fullname" autofocus> <br>
-        <label for="email">Email:</label><br><input type="email" id="email" name="email" autocomplete="off"><br>
-        <label for="subject">Subject:</label><br><input type="text" id="subject" name="subject" autocomplete="off"><br>
-        <lable for="message">Message:</lable><br><textarea name="message">Your message</textarea>
-        <button><a href="mailto:arunakumariofficial@gmail.com">Submit</a></button>
-        </form> 
+        <div class="form">
+            <h1>Get In Touch</h1>
+            <form>
+                <label for="name">Name:</label><br><input type="text" id="name" name="fullname" autofocus> <br>
+                <label for="email">Email:</label><br><input type="email" id="email" name="email" autocomplete="off"><br>
+                <label for="subject">Subject:</label><br><input type="text" id="subject" name="subject"
+                    autocomplete="off"><br>
+                <lable for="message">Message:</lable><br><textarea name="message">Your message</textarea>
+                <button><a href="mailto:arunakumariofficial@gmail.com">Submit</a></button>
+            </form>
+        </div>
     </div>
-</div>
 </div>
 
 {% endblock %}
