--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,52 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="../static/index.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <a href="/"
-        ><h3><strong>Aruna</strong></h3></a
-      >
-      <nav class="nav-bar">
-        <ul>
-          <a href="/">
-            <li>Home</li>
-          </a>
-          <a href="/about">
-            <li>About</li>
-          </a>
-          <a href="/education">
-            <li>Education</li>
-          </a>
-          <a href="/skills">
-            <li>Skills</li>
-          </a>
-          <a href="/contact">
-            <li>Contact</li>
-          </a>
-          <div>
-          <botton onclick="icon()"><img src="../static/moon.svg" /></botton>
-          <script>
-            function icon() {
-              var element = document.body;
-              element.classList.toggle("dark-mode");
-            }
-          </script>
-        </div>
-        </ul>
-      </nav>
-    </header>
-    {% block content %} {% endblock %}
-    <div class="footer-container">
-      <footer>
-        <p>Made with❤️by Aruna Kumari</p>
-      </footer>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="../static/index.css" />
+</head>
+
+<body id="body-mode">
+  <header class="header">
+    <a href="/">
+      <h3><strong>Aruna</strong></h3>
+    </a>
+    <nav class="nav-bar">
+      <ul>
+        <a href="/">
+          <li>Home</li>
+        </a>
+        <a href="/about">
+          <li>About</li>
+        </a>
+        <a href="/education">
+          <li>Education</li>
+        </a>
+        <a href="/skills">
+          <li>Skills</li>
+        </a>
+        <a href="/contact">
+          <li>Contact</li>
+        </a>
+        <div> <img src="../static/moon.svg"> </div>
+      </ul>
+    </nav>
+  </header>
+  {% block content %} {% endblock %}
+  <div class="footer-container">
+    <footer>
+      <p>Made with❤️by Aruna Kumari</p>
+    </footer>
+  </div>
+</body>
+
 </html>
