--- a/templates/education.html
+++ b/templates/education.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
+<div class="educationPage" id="section3">
 <div class="container">
     <div class="education">
         <h1>Education</h1>
@@ -30,5 +30,5 @@
         </div>
     </div>
 </div>
-
+</div>
 {% endblock %}
