--- a/static/index.css
+++ b/static/index.css
@@ -5,9 +5,10 @@
 }
 
 body {
-  background-color: #dfc2f5;
-  background-image: radial-gradient(at 47% 33%, hsl(297.17, 72%, 60%) 0, transparent 59%),
-    radial-gradient(at 82% 65%, hsl(193.93, 100%, 67%) 0, transparent 55%);
+  background-color: #FDFAF6;
+  /* background-image: linear-gradient(to top, #feada6 0%, #f5efef 100%); */
+  height: 100vh;
+  overflow: auto;
 }
 
 .header {
@@ -20,7 +21,7 @@ body {
 .header>a {
   cursor: pointer;
   letter-spacing: 1px;
-  color: black;
+  color: #0f0f0f;
   text-decoration: none;
 }
 
@@ -31,7 +32,7 @@ body {
 }
 
 .nav-bar>ul>a {
-  color: black;
+  color: #0f0f0f;
   text-decoration: none;
 }
 
@@ -50,6 +51,7 @@ body {
   width: 80%;
   margin: 50px auto;
   height: 400px;
+
 }
 
 .content {
@@ -80,7 +82,7 @@ body {
 }
 
 .contact-btn {
-  background-color: #537fe7;
+  background-color: #0044ff;
   text-transform: capitalize;
   padding: 15px;
   border: none;
@@ -89,6 +91,10 @@ body {
   display: flex;
   font-size: 14px;
   margin-top: 10px;
+}
+
+.contact-btn:hover {
+  background-color: #0036c9;
 }
 
 .contact-btn>a {
@@ -105,22 +111,21 @@ body {
 
 .footer-container {
   position: absolute;
+  bottom: 0px;
   width: 100%;
-  margin-top: 250px;
   font-size: small;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0px 0px 3px 0px;
+  border-top: 1px solid rgb(165, 0, 0);
+  padding: 10px 0px;
+  text-align: center;
 }
 
 .about {
-  text-align: center;
   width: inherit;
+  font-family: auto;
 }
 
 .about>h1 {
+  text-align: center;
   margin-bottom: 10px;
 }
 
@@ -134,22 +139,96 @@ body {
   width: inherit;
 }
 
-.education>h1 {
+/*contact page */
+.container form {
+  width: 100%;
+}
+
+.contact-card {
+  width: 45%;
+  height: fit-content;
   margin: auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 1px lightgrey;
+  padding: 10px 0px;
+  background: rgb(255, 255, 255);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border: 1px solid rgb(165, 0, 0);
+
 }
 
-.intouch {
-  /*contact page */
+.contact-card h1 {
+  color: #0f0f0f;
+  text-align: center;
+}
+
+.contact-inpt {
   display: flex;
-  width: 75%;
-  margin: 0px auto;
-  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 80%;
+  margin: 20px auto;
+  height: 80%;
 }
 
-.links {
-  list-style: none;
+.form-inpt {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 8px;
 }
 
-.form {
+.form-inpt input {
+  height: 30px;
+  width: 70%;
+  padding: 3px 5px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  outline: none;
+  box-shadow: inset;
+  font-size: medium;
+}
+
+.form-inpt>input:focus {
+  border: 1px solid #0044ff;
+}
+
+.form-inpt>textarea {
+  width: 70%;
+  padding: 3px 5px;
+  height: 100px;
+  border-radius: 5px;
+  outline: none;
+  font-size: medium;
+
+}
+
+.form-inpt>textarea:focus {
+  border: 1px solid #0044ff;
+}
+
+.form-inpt>label {
+  width: 30%;
+}
+
+.contact-inpt>button {
+  background-color: #0044ff;
+  border: none;
+  border-radius: 5px;
+  padding: 12px 11px;
+  letter-spacing: 1px;
   margin-left: auto;
+  margin-top: 8px;
+}
+
+
+.contact-inpt>button:hover {
+  background-color: #0036c9;
+}
+
+.contact-inpt>button>a {
+  text-decoration: none;
+  color: white;
 }
