--- a/templates/education.html
+++ b/templates/education.html
@@ -1,34 +1,23 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="educationPage" id="section3">
 <div class="container">
     <div class="education">
         <h1>Education</h1>
-        <div class="table">
-            <table>
-                <tr>
-                    <td>BTech</td>
-                    <td>MIT ACademy Of Engineering, Pune, Maharashtra
-                        Stream - Electronics And Telecommunication
-                    </td>
-                    <td>2021</td>
-                </tr>
-                <tr>
-                    <td>12th</td>
-                    <td>RSDM college, Saran, Bihar
-                        Stream - Science
-                    </td>
-                    <td>2015</td>
-                </tr>
-                <tr>
-                    <td>10th</td>
-                    <td>RSH School, Saran, Bihar</td>
-                    <td>2013</td>
-                </tr>
-            </table>
-        </div>
+        <ul>
+            <li>BTech (2021)</li>
+            <li>MIT ACademy Of Engineering, Pune, Maharashtra
+                (Stream - Electronics And Telecommunication)</li>
+        </ul>
+        <ul>
+            <li>12th (2015)</li>
+            <li>RSDM college, Saran, Bihar
+                (Stream - Science)</li>
+        </ul>
+        <ul>
+            <li>10th (2013)</li>
+            <li>RSH School, Saran, Bihar</li>
+        </ul>
     </div>
-</div>
 </div>
 {% endblock %}
