--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <h4>{{position}}</h4>
     <p>{{intro}}</p>
     <button class="contact-btn">
-      <a href="mailto:arunakumariofficial@gmail.com">contact me<img src="../static/contact-logo.svg" /></a>
+      <a href="https://docs.google.com/document/d/1zaqQGqRc1JgpwB4oHFvmTXrSxc27MvrqXitX9e16bpc/">RESUME</a>
     </button>
   </div>
   <div class="profile-img">
