--- a/templates/skills.html
+++ b/templates/skills.html
@@ -2,32 +2,18 @@
 
 {% block content %}
 <div class="container">
-    <div class="skills">
+    <div class="skill">
         <h1>Skills</h1>
-        <div class="table">
-            <table>
-                <tr>
-                    <td> HTML5</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td> CSS</td>
-                    <td>⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td> Python</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td> Flask</td>
-                    <td>⭐⭐⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Bootstrap</td>
-                    <td>⭐⭐⭐⭐⭐</td>
-                </tr>
-            </table>
-        </div>
+        <ul>
+            <li><img src="../static/html-5.svg">HTML5</li>
+            <li><img src="../static/css-3.svg">CSS</li>
+            <li><img src="../static/bootstrap.svg">Bootstrap</li>
+        </ul>
+        <ul>
+            <li><img src="../static/python.svg">Python</li>
+            <li><img src="../static/flask.svg">Flask</li>
+        </ul>
     </div>
 </div>
+
 {% endblock %}
